--- a/src/GUI/NewUserFactory.form
+++ b/src/GUI/NewUserFactory.form
@@ -151,10 +151,11 @@
         <Component class="javax.swing.JComboBox" name="statusCombo">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
+              <StringArray count="4">
                 <StringItem index="0" value=""/>
-                <StringItem index="1" value="Admin"/>
-                <StringItem index="2" value="User"/>
+                <StringItem index="1" value="admin"/>
+                <StringItem index="2" value="user"/>
+                <StringItem index="3" value="director"/>
               </StringArray>
             </Property>
           </Properties>
